@@ -22,7 +22,8 @@
         "nette/application": "^2.4",
         "nette/di": "^2.4",
         "nette/utils": "^2.4",
-        "latte/latte": "^2.4"
+        "latte/latte": "^2.4",
+        "nexendrie/utils": "^1.0"
     },
     "require-dev": {
         "nexendrie/code-quality": "dev-master",
