@@ -3,7 +3,8 @@ declare(strict_types=1);
 
 namespace Nexendrie\Menu;
 
-use Nette\Localization\ITranslator;
+use Nette\Localization\ITranslator,
+    Nexendrie\Utils\Collection;
 
 /**
  * Menu
@@ -15,7 +16,7 @@ use Nette\Localization\ITranslator;
  * @property ITranslator $translator
  * @property-read MenuItem[] $allowedItems
  */
-class Menu implements \ArrayAccess, \Countable, \IteratorAggregate {
+class Menu extends Collection {
   use \Nette\SmartObject;
   
   /** @var MenuItem[] */
@@ -88,72 +89,6 @@ class Menu implements \ArrayAccess, \Countable, \IteratorAggregate {
    */
   function setTranslator(ITranslator $translator) {
     $this->translator = $translator;
-  }
-  
-  /**
-   * @return int
-   */
-  function count(): int {
-    return count($this->items);
-  }
-  
-  /**
-   * @return \ArrayIterator
-   */
-  function getIterator(): \ArrayIterator {
-    return new \ArrayIterator($this->items);
-  }
-  
-  /**
-   * @param int $index
-   * @return bool
-   */
-  function offsetExists($index): bool {
-    return $index >= 0 AND $index < count($this->items);
-  }
-  
-  /**
-   * @param int $index
-   * @return MenuItem
-   * @throws \OutOfRangeException
-   */
-  function offsetGet($index): MenuItem {
-    if($index < 0 OR $index >= count($this->items)) {
-      throw new \OutOfRangeException("Offset invalid or out of range.");
-    }
-    return $this->items[$index];
-  }
-  
-  /**
-   * @param int|NULL $index
-   * @param MenuItem $item
-   * @return void
-   * @throws \OutOfRangeException
-   * @throws \InvalidArgumentException
-   */
-  function offsetSet($index, $item): void {
-    if(!$item instanceof $this->class) {
-      throw new \InvalidArgumentException("Argument must be of $this->class type.");
-    }
-    if($index === NULL) {
-      $this->items[] = & $item;
-    } elseif($index < 0 OR $index >= count($this->items)) {
-      throw new \OutOfRangeException("Offset invalid or out of range.");
-    } else {
-      $this->items[$index] = & $item;
-    }
-  }
-  
-  /**
-   * @param int $index
-   * @return void
-   * @throws \OutOfRangeException
-   */
-  function offsetUnset($index): void {
-    if($index < 0 OR $index >= count($this->items)) {
-      throw new \OutOfRangeException("Offset invalid or out of range.");
-    }
-    array_splice($this->items, $index, 1);
   }
   
   /**
